# Construction

./: AUDIT_FIXES_REPORT.md  CODE_VERIFIED_ASSESSMENT.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  README.md  SECURITY_AUDIT.md  package.json  pnpm-lock.yaml
.codex/: codex-os.manifest.json
.codex/bootstrap/: tests-docs.v1.json
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
scripts/: cleanup-all.sh  cleanup-heavy.sh  lean-dev.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  lib.rs  main.rs  validation.rs
src-tauri/src/commands/: attachments.rs  dashboard.rs  import.rs  incidents.rs  jsa.rs  locations.rs  mod.rs  osha.rs  rca.rs  toolbox.rs
src-tauri/src/db/: incidents.rs  jsa.rs  locations.rs  mod.rs  osha.rs  rca.rs  toolbox.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_toolbox_talks.sql  003_toolbox_seed.sql  004_jsa.sql  005_jsa_seed.sql  006_inspections.sql  007_inspections_seed.sql  008_near_miss.sql  009_training.sql  010_training_seed.sql  011_equipment.sql  012_sync_auth.sql  013_trade_hazards.sql  014_trade_hazards_seed.sql
src/components/dashboard/: DashboardPage.tsx
src/components/import/: ImportPage.tsx
src/hooks/: useKeyboardShortcuts.ts  useToast.ts
src/lib/: constants.ts  types.ts
src/pages/: JsaPage.tsx  ToolboxCreatePage.tsx  ToolboxPages.test.tsx  ToolboxTalkDetailPage.tsx  ToolboxTalksPage.tsx
src/stores/: dashboardStore.ts  incidentStore.ts  rcaStore.ts  settingsStore.ts
src/test/: setup.ts
(+22 files in other folders)
