[package]
name = "construction-safety-tracker"
version = "0.1.0"
description = "Construction Safety Incident Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "construction_safety_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
thiserror = "2"
anyhow = "1"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
